update blogpost and minor style modifizations

--- a/angebote/index.html
+++ b/angebote/index.html
@@ -46,15 +46,15 @@ title: "Angebote"
                     </div>
 
                     <div class="format__statement text__white">
-                        <p class="format__statement-elaboration">
-                            <b>Lügen & Presse</b> 
-                            <br> Skandale streuen und aufdecken - Als fiktive Nachrichtenagenturen versucht ihr eure Konkurrenz hinters Licht zu führen. Wer schafft es alternative Fakten am glaubhaftesten zu verpacken und wer kann sie am besten widerlegen? Gute Augen und steile Thesen gefordert! </br>
-                            <b>Themen: </b> Medienanalyse und Fake News</b>
-                            <b>Prinzip: </b> Simulationsspiel/Gruppenspiel</b>
+                        <br class="format__statement-elaboration">
+                            <b>Lügen & Presse</b><br />
+                            Skandale streuen und aufdecken - Als fiktive Nachrichtenagenturen versucht ihr eure Konkurrenz hinters Licht zu führen. Wer schafft es alternative Fakten am glaubhaftesten zu verpacken und wer kann sie am besten widerlegen? Gute Augen und steile Thesen gefordert! <br />
+                            <b>Themen: </b> Medienanalyse und Fake News</b><br />
+                            <b>Prinzip: </b> Simulationsspiel/Gruppenspiel</b><br />
                             <b>Dauer: </b> 2-4 Stunden</b>
                     </div>
                 </div>
-                <div class="format__point_two fond_purple_gradient">
+                <div class="format__point_one fond_purple_gradient">
                     <div class="format__illustration-wrapper">
                         <div class="format__illustration">
                             <svg xmlns="http://www.w3.org/2000/svg" height="250" viewBox="129 100 283 400"><g fill="#FFF"><circle cx="185" cy="156" r="56"/><path d="M254 100v400h37.39l54.048-400M373.61 100l-54.048 400H412V100"/></g></svg>
@@ -63,69 +63,69 @@ title: "Angebote"
 
                     <div class="format__statement text__white">
                         <p class="format__statement-elaboration">
-                            <b>Invasion der Cybertrolle</b> <br>
-                            Argumente gegen Trolle - ihr  verwandelt euch in diesem Workshop in digitale Abenteuer-Gruppen, die bewaffnet mit Smartphone und Tablet sowie der helfenden Stimme des Dungeon-Masters (Spielleiters), Licht in die dunklen Gewölbe sozialer Plattformen bringen müssen. Gegen die dort lauernden Trolle helfen aber weder Schwerter noch Zauber, sondern nur gute Argumente und Redegeschick!</br>
-                            <b>Thema:</b> Diskussionskultur im Netz</b>
-                            <b>Prinzip: </b> Digitales Pen&Paper-Rollenspiel</b>
+                            <b>Invasion der Cybertrolle</b> <br />
+                            Argumente gegen Trolle - ihr  verwandelt euch in diesem Workshop in digitale Abenteuer-Gruppen, die bewaffnet mit Smartphone und Tablet sowie der helfenden Stimme des Dungeon-Masters (Spielleiters), Licht in die dunklen Gewölbe sozialer Plattformen bringen müssen. Gegen die dort lauernden Trolle helfen aber weder Schwerter noch Zauber, sondern nur gute Argumente und Redegeschick!<br />
+                            <b>Thema:</b> Diskussionskultur im Netz</b><br />
+                            <b>Prinzip: </b> Digitales Pen&Paper-Rollenspiel</b><br />
                             <b>Dauer: </b> 2-8 Stunden</b>
                         </p>
                     </div>
                 </div>
-                <!--<div class="format__point_three fond_green_gradient">-->
-                    <!--<div class="format__illustration-wrapper">-->
-                        <!--<div class="format__illustration">-->
-                            <!--<svg xmlns="http://www.w3.org/2000/svg"  height="250" viewBox="129 100 283 400"><g fill="#FFF"><circle cx="185" cy="156" r="56"/><path d="M254 100v400h37.39l54.048-400M373.61 100l-54.048 400H412V100"/></g></svg>-->
-                        <!--</div>-->
-                    <!--</div>-->
+                <div class="format__point_one fond_green_gradient">
+                    <div class="format__illustration-wrapper">
+                        <div class="format__illustration">
+                            <svg xmlns="http://www.w3.org/2000/svg"  height="250" viewBox="129 100 283 400"><g fill="#FFF"><circle cx="185" cy="156" r="56"/><path d="M254 100v400h37.39l54.048-400M373.61 100l-54.048 400H412V100"/></g></svg>
+                        </div>
+                    </div>
 
-                    <!--<div class="format__statement text__white">-->
-                        <!--<p class="format__statement-elaboration">-->
-                            <!--<b>Ungehörsam</b> <br>-->
-                            <!--Gut und verrückt demonstrieren - Ihr erarbeitet die Geschichte einer fiktiven Demonstration, die je nach Entscheidung der Teilnehmenden unterschiedliche Ausgänge nehmen kann! Im (Außen-)Raum platzierte QR-Codes erzählen den Ablauf, in dem ihr entscheiden müsst, wie man sich verhält. So erschließt ihr euch Stück für Stück verschiedenste Handlungsstränge und lernt geheime Informationen an realen Plätzen zu verstecken - also doch eine reale Demonstration?</br>-->
-                            <!--<b>Thema:</b> Kreative Meinungsäußerung-->
-                            <!--<b>Prinzip: </b> Digitales Spielbuch</b>-->
-                            <!--<b>Dauer: </b> 4 Stunden bis 2 Tage</b>-->
-                        <!--</p>-->
-                    <!--</div>-->
-                <!--</div>-->
+                    <div class="format__statement text__white">
+                        <p class="format__statement-elaboration">
+                            <b>Ungehörsam</b> <br />
+                            Gut und verrückt demonstrieren - Ihr erarbeitet die Geschichte einer fiktiven Demonstration, die je nach Entscheidung der Teilnehmenden unterschiedliche Ausgänge nehmen kann! Im (Außen-)Raum platzierte QR-Codes erzählen den Ablauf, in dem ihr entscheiden müsst, wie man sich verhält. So erschließt ihr euch Stück für Stück verschiedenste Handlungsstränge und lernt geheime Informationen an realen Plätzen zu verstecken - also doch eine reale Demonstration?<br />
+                            <b>Thema:</b> Kreative Meinungsäußerung<br />
+                            <b>Prinzip: </b> Digitales Spielbuch</b><br />
+                            <b>Dauer: </b> 4 Stunden bis 2 Tage</b>
+                        </p>
+                    </div>
+                </div>
 
-                <!--<div class="format__point_four fond_blue_gradient">-->
-                    <!--<div class="format__illustration-wrapper">-->
-                        <!--<div class="format__illustration">-->
-                            <!--<svg xmlns="http://www.w3.org/2000/svg" height="250" viewBox="129 100 283 400"><g fill="#FFF"><circle cx="185" cy="156" r="56"/><path d="M254 100v400h37.39l54.048-400M373.61 100l-54.048 400H412V100"/></g></svg>-->
-                        <!--</div>-->
-                    <!--</div>-->
+                <div class="format__point_one fond_blue_gradient">
+                    <div class="format__illustration-wrapper">
+                        <div class="format__illustration">
+                            <svg xmlns="http://www.w3.org/2000/svg" height="250" viewBox="129 100 283 400"><g fill="#FFF"><circle cx="185" cy="156" r="56"/><path d="M254 100v400h37.39l54.048-400M373.61 100l-54.048 400H412V100"/></g></svg>
+                        </div>
+                    </div>
 
-                    <!--<div class="format__statement text__white">-->
-                        <!--<p class="format__statement-elaboration">-->
-                            <!--<b>Escape Populism</b>--> 
-                            <!--<br> Kann man Populismus entkommen? Im Escape Game werdet ihr in einen Raum gesperrt, aus dem ihr entkommen oder eine Aufgabe erfüllen müsst. So werdet ihr zu Figuren eines real gewordenen Adventure Spiels und müsst euch im Team verständigen, um knifflige Rätsel zu lösen, die euch auch moralisch auf die Probe stellen!</br>--> 
-                            <!--<b>Thema:</b> Populismus-->
-                            <!--<b>Prinzip: </b> Escape Game</b>-->
-                            <!--<b>Dauer: </b> 2-4 Stunden</b>--> 
-                        <!--</p>-->
-                    <!--</div>-->
-                <!--</div>-->
+                    <div class="format__statement text__white">
+                        <p class="format__statement-elaboration">
+                            <b>Escape Populism</b><br />
+                            Kann man Populismus entkommen? Im Escape Game werdet ihr in einen Raum gesperrt, aus dem ihr entkommen oder eine Aufgabe erfüllen müsst. So werdet ihr zu Figuren eines real gewordenen Adventure Spiels und müsst euch im Team verständigen, um knifflige Rätsel zu lösen, die euch auch moralisch auf die Probe stellen!<br />
+                            <b>Thema:</b> Populismus<br />
+                            <b>Prinzip: </b> Escape Game</b><br />
+                            <b>Dauer: </b> 2-4 Stunden</b>
+                        </p>
+                    </div>
+                </div>
 
-                <!--<div class="format__point_five fond_darkblue_gradient">-->
-                    <!--<div class="format__illustration-wrapper">-->
-                        <!--<div class="format__illustration">-->
-                            <!--<svg xmlns="http://www.w3.org/2000/svg"  height="250" viewBox="129 100 283 400"><g fill="#FFF"><circle cx="185" cy="156" r="56"/><path d="M254 100v400h37.39l54.048-400M373.61 100l-54.048 400H412V100"/></g></svg>-->
-                        <!--</div>-->
-                    <!--</div>-->
-
-                    <!--<div class="format__statement text__white">-->
-                        <!--<p class="format__statement-elaboration">-->
-                            <!--<b>Game of Thoughts</b>--> 
-                            <!--<br> Kleine Spiele selbst gemacht - In kurzer Zeit und ohne Vorkenntnisse verwandelt ihr das, was euch gerade umtreibt und die  Frage “Was müsste man daran mal ändern?” in digitale Spiele! In diesem Workshop erlernt ihr so nicht nur die Grundlagen des Gamedesigns, sondern auch eure Meinungen interaktiv erfahrbar zu machen.</br>-->
-                            <!--<b>Thema: </b>Meinungsbildung-->
-                            <!--<b>Prinzip: </b>Game Jam</b>-->
-                            <!--<b>Dauer: </b> 4 Stunden bis 3 Tage</b>-->
-
-                        <!--</p>-->
-                    <!--</div>-->
-                <!--</div>-->
+                <div class="format__point_one fond_darkblue_gradient">
+                    <div class="format__illustration-wrapper">
+                        <div class="format__illustration">
+                            <svg xmlns="http://www.w3.org/2000/svg"  height="250" viewBox="129 100 283 400"><g fill="#FFF"><circle cx="185" cy="156" r="56"/><path d="M254 100v400h37.39l54.048-400M373.61 100l-54.048 400H412V100"/></g></svg>
+                        </div>
+                    </div>
+<!---->
+                    <div class="format__statement text__white">
+                        <p class="format__statement-elaboration">
+                            <b>Game of Thoughts</b><br />
+                            Kleine Spiele selbst gemacht - In kurzer Zeit und ohne Vorkenntnisse verwandelt ihr das, was euch gerade umtreibt und die  Frage “Was müsste man daran mal ändern?” in digitale Spiele! In diesem Workshop erlernt ihr so nicht nur die Grundlagen des Gamedesigns, sondern auch eure Meinungen interaktiv erfahrbar zu machen.<br />
+                            <b>Thema: </b>Meinungsbildung<br />
+                            <b>Prinzip: </b>Game Jam</b><br />
+                            <b>Dauer: </b> 4 Stunden bis 3 Tage</b><br />
+                        </p>
+                    </div>
+                </div>
             </div>
+            <div class="project-dots"></div>
         </div>
     </div>
 
