--- a/projekt/index.html
+++ b/projekt/index.html
@@ -24,18 +24,18 @@ title: "Projekt"
     <div class="container text__white">
         <div class="row goals">
             <h2 class="text-center">Wir wollen...</h2>
-            <div class="col-lg-4">
-                <p>
+            <div class="col-md-4">
+                <p class="text-left">
                     ...  Räume schaffen, in denen sich Jugendliche ausprobieren können, und sie dazu ermutigen, sich mit Hilfe von digitalen Kompetenzen, Werkzeugen & Technologien selbstbestimmt und aktiv an gesellschaftlichen Prozessen zu beteiligen.
                 </p>
             </div>
-            <div class="col-lg-4">
-                <p>
+            <div class="col-md-4">
+                <p class="text-left">
                   ... in Zeiten von Fake News, Hate Speech und Populismus das Internet für und mit jungen Menschen als positiven Gestaltungsraum zurückerobern und die öffentlichen Diskurse in unserer alternden Gesellschaft um die Perspektiven Jugendlicher bereichern.
                 </p>
             </div>
-            <div class="col-lg-4">
-               <p>                    
+            <div class="col-md-4">
+               <p class="text-left">
                   ... Mitarbeiter*innen in Jugendeinrichtungen ermöglichen, neue Zugänge zu aktuellen Themen kennenzulernen und sie dazu befähigen, unsere Formate jederzeit eigenständig und unkompliziert durchführen zu können.
                 </p>
             </div>
