--- a/angebote/index.html
+++ b/angebote/index.html
@@ -160,6 +160,7 @@ title: "Angebote"
                     </p>
                 </div>
             </div>
+         </div>
       </div>
   </div>
 </div>
