--- a/presse/index.html
+++ b/presse/index.html
@@ -13,7 +13,7 @@ title: Presse
 				<h1> Infomaterial </h1>
 				<p>
 					Hier findet ihr alle Infomaterialien zum Download.
-					<br> Presseanfragen bitte an: <b><a class="text__blue text__white" href="mailto:jasmin.helm@okfn.de">Jasmin Helm</a></b>
+					<br> Presseanfragen bitte an: <b><a class="text__blue text__black" href="mailto:jasmin.helm@okfn.de">Jasmin Helm</a></b>
 				</p>
 			</div>
 		</div>
