--- a/presse/index.html
+++ b/presse/index.html
@@ -12,7 +12,7 @@ title: Presse
 			<div class="col-lg-12 title">
 				<h1> Infomaterial </h1>
 				<p>
-					Hier findet ihr alle Infomaterialien zum Download.
+					Hier findet ihr alle Infomaterialien zum Download. <br>
 					<br> Presseanfragen bitte an: <b><a class="text__blue text__black" href="mailto:jasmin.helm@okfn.de">Jasmin Helm</a></b>
 				</p>
 			</div>
