--- a/angebote/index.html
+++ b/angebote/index.html
@@ -36,7 +36,7 @@ title: "Angebote"
         </div>
 
         <div class="col-lg-12">
-            <h3>Workshops</h3>
+            <h3 id="Workshops">Workshops</h3>
             <div class="project-slider">
                 <div class="format__point_one fond_red_gradient">
                     <div class="format__illustration-wrapper">
