--- a/angebote/index.html
+++ b/angebote/index.html
@@ -23,7 +23,7 @@ title: "Angebote"
         <div class="row">
          <h1>Unsere Angebote</h1>
             <p class="text">
-                    Unsere Angebote richten sich zum einen an Jugendliche und außerschulische Jugendeinrichtungen, zum anderen an überregionale Bildungsverbände und Träger von Jugendbildungsstätten. 
+                    Unsere Angebote richten sich zum einen an Jugendliche und außerschulische Jugendeinrichtungen, zum anderen an <a href="WS">überregionale Bildungsverbände und Träger von Jugendbildungsstätten</a>. 
                 </p>
             </br>
             <div class="col-lg-12 title">
