--- a/angebote/index.html
+++ b/angebote/index.html
@@ -32,7 +32,7 @@ title: "Angebote"
                     Für Jugendliche und außerschulische Jugendeinrichtungen haben wir verschiedene Workshop- und Aktionsformate entwickelt. Eine Auswahl findet ihr hier: 
                 </p><br>
 
-                <h3>Workshop Workshops Workshops</h3>
+                <h3>Workshops Workshops Workshops</h3>
                 <div class="panel-group" id="accordion">
                     <div class="panel">
                         <h4>
