--- a/mitmachen/index.html
+++ b/mitmachen/index.html
@@ -15,16 +15,16 @@ title: "Mitmachen!"
             <div class="col-lg-8 col-lg-offset-2 title">
                 <h1>Wer kann bei den Demokratielaboren mitmachen?</h1>
                 <p>
-                   Mit den Demokratielaboren richten wir uns zum einen an <strong>Jugendliche</strong> zwischen 12 und 21 Jahren, die Lust auf spannende Workshops zu digitalen und gesellschaftlichen Themen haben, z.B. Engagement in der Nachbarschaft, oder mehr über Aktivismus und gesellschaftliche Teilhabe lernen wollen. <br> <br> <a class="highlight-grey" href="#Jugendliche">☟ mehr erfahren</a>
+                   Mit den Demokratielaboren richten wir uns zum einen an <strong>Jugendliche</strong> zwischen 12 und 21 Jahren, die Lust auf spannende Workshops zu digitalen und gesellschaftlichen Themen haben, z.B. Engagement in der Nachbarschaft, oder mehr über Aktivismus und gesellschaftliche Teilhabe lernen wollen. <br> <a class="highlight-grey" href="#Jugendliche">☟ mehr erfahren</a>
                 </p>
 
                 <p>
-                   Zum anderen richten wir uns an <strong>pädagogische Fachkräfte und Jugendeinrichtungen</strong>, die Lust haben, die Workshops mit Hilfe eines Train-the-Trainer-Konzepts auf einfache und verständliche Weise von unseren Expert*innen zu erlernen, um sie dann ganz leicht an ihren Einrichtungen selbst umsetzen zu können. <br> <br>
+                   Zum anderen richten wir uns an <strong>pädagogische Fachkräfte und Jugendeinrichtungen</strong>, die Lust haben, die Workshops mit Hilfe eines Train-the-Trainer-Konzepts auf einfache und verständliche Weise von unseren Expert*innen zu erlernen, um sie dann ganz leicht an ihren Einrichtungen selbst umsetzen zu können.<br>
                    <a class="highlight-grey" href="#Jugendeinrichtung">☟ mehr erfahren</a>
                 </p>
 
                 <p>
-                   Auch als <strong>Jugendverband, Träger und Einrichtung der Kinder- und Jugendarbeit oder NGO</strong> kann man mitmachen und etwas über digitales und datengestützte Arbeit lernen. <br> <br>
+                   Auch als <strong>Jugendverband, Träger und Einrichtung der Kinder- und Jugendarbeit oder NGO</strong> kann man mitmachen und etwas über digitales und datengestützte Arbeit lernen. <br> 
                    <a class="highlight-grey" href="#Bildungsverband">☟ mehr erfahren</a>
                 </p>
 
