--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ title: Hello
             <img width="250" class="img-center" src="/static/img/logo_bold.svg">
                 <p>
                    <br> Die Demokratielabore sind ein Modellprojekt der <a class="highlight-grey" href="https://okfn.de">Open Knowledge Foundation Deutschland</a>, das vom <a class="highlight-grey" href="http://www.bmfsfj.de">Bundesministerium für Familie, Senioren, Frauen und Jugend</a> im Rahmen des Bundesprogramms <a class="highlight-grey" href="http://www.demokratie-leben.de/">Demokratie leben!</a> gefördert wird. </br>
-                   <br> Wir führen verschiedene Workshop- und Aktionsformate mit Jugendlichen im Alter von 12 bis 21 Jahren rund um Digitalisierung, Technologien und gesellschaftliches Miteinander durch. Dazu arbeiten wir sowohl eng mit außerschulischen Jugendeinrichtungen als auch überregionalen Bildungsverbänden und Initiativen zusammen – deutschlandweit. </br>
+                   <br> Wir führen verschiedene Workshop- und Aktionsformate mit Jugendlichen im Alter von 12 bis 21 Jahren rund um Digitalisierung, Technologien und gesellschaftliches Miteinander durch. Dazu arbeiten wir sowohl eng mit außerschulischen Jugendeinrichtungen als auch überregionalen Jugendverbände und Initiativen zusammen – deutschlandweit. </br>
                    <a href="/projekt"><button  class="btn btn-start">Mehr erfahren!</button> </a> 
                 </p>   
             </div>
