--- a/mitmachen/index.html
+++ b/mitmachen/index.html
@@ -25,7 +25,7 @@ title: "Mitmachen!"
 
                 <p>
                    Auch als <strong>Jugendverband, Träger und Einrichtung der Kinder- und Jugendarbeit oder NGO</strong> kann man mitmachen und etwas über digitales und datengestützte Arbeit lernen. <br> 
-                   <a class="highlight-grey" href="#Bildungsverband">☟ mehr erfahren</a>
+                   <a class="highlight-grey" href="#Jugendverband">☟ mehr erfahren</a>
                 </p>
 
                 <p>
@@ -91,12 +91,12 @@ title: "Mitmachen!"
     </div>
  </div>
 <div class="parallax"></div>
- <div class="beneath-sections jumbotron fond__white" id="Bildungsverband">
+ <div class="beneath-sections jumbotron fond__white" id="Jugendverband">
     <div class="container text__black">
         <div class="col-lg-8 col-lg-offset-2 ">
             <h2>Als Jugendverband, Träger und Einrichtung in der Kinder- und Jugendarbeit oder gemeinnützige Organisation</h2>
             <p class="text">
-                Wie können Träger ihre interne Arbeitsorganisation mit digitalen Tools und Technologien effektiver machen? Wie werden sie selbst als Akteure im außerschulischen Bildungsbereich sichtbarer? In unserem zweitägigen Workshop zeigen wir euch wie ihr mehr aus Daten machen könnt. Zusätzlich beraten wir gemeinnützige Organisationen, wie sie ihre digitalen Fähigkeiten vertiefen und aufbauen können. Interessiert? Dann schreibt uns eine <b><a class="highlight-grey" class="text__black" href="mailto:info@demokratielabore.de">Mail.</a></b> Weitere Infos zur digitalen Mündigkeit für gemeinnützige Akteure findet ihr auch bei der <a href="https://datenschule.de/">Datenschule</a>.      
+                Wie können Träger ihre interne Arbeitsorganisation mit digitalen Tools und Technologien effektiver machen? Wie werden sie selbst als Akteure im außerschulischen Bildungsbereich sichtbarer? In unserem zweitägigen Workshop zeigen wir euch wie ihr mehr aus Daten machen könnt. Zusätzlich beraten wir gemeinnützige Organisationen, wie sie ihre digitalen Fähigkeiten vertiefen und aufbauen können. Interessiert? Dann schreibt uns eine <b><a class="highlight-grey" class="text__black" href="mailto:info@demokratielabore.de">Mail.</a></b> Weitere Infos zur digitalen Mündigkeit für gemeinnützige Akteure findet ihr auch bei der <a class="highlight-grey"  href="https://datenschule.de/">Datenschule</a>.      
             </p>
        </div>
     </div>
