--- a/projekt/index.html
+++ b/projekt/index.html
@@ -14,7 +14,7 @@ title: "Projekt"
             <h1 class="text-center">Das Projekt</h1>
             <p>
                <br> Die Demokratielabore sind ein Modellprojekt der <a class="highlight-grey" href="https://okfn.de">Open Knowledge Foundation Deutschland</a>, das vom <a class="highlight-grey" href="http://www.bmfsfj.de">Bundesministerium für Familie, Senioren, Frauen und Jugend</a> im Rahmen des Bundesprogramms <a class="highlight-grey" href="http://www.demokratie-leben.de/">Demokratie leben!</a> gefördert wird. </br>
-               <br> Wir führen verschiedene Workshop- und Aktionsformate mit Jugendlichen im Alter von 12 bis 21 Jahren rund um Digitalisierung, Technologien und gesellschaftliches Miteinander durch. Dazu arbeiten wir sowohl eng mit außerschulischen Jugendeinrichtungen als auch überregionalen Bildungsverbänden und Initiativen zusammen – deutschlandweit. </br>
+               <br> Wir führen verschiedene Workshop- und Aktionsformate mit Jugendlichen im Alter von 12 bis 21 Jahren rund um Digitalisierung, Technologien und gesellschaftliches Miteinander durch. Dazu arbeiten wir sowohl eng mit außerschulischen Jugendeinrichtungen als auch überregionalen Jugendverbänden und Initiativen zusammen – deutschlandweit. </br>
                <a href="/projekt"><button  class="btn btn-start">Mehr erfahren!</button> </a> 
             </p>  
         </div>
@@ -53,7 +53,7 @@ title: "Projekt"
                 <br><br> 
                 Wir möchten auch das Communitybuilding fördern und bieten Hilfe bei der Entstehung von <a href="/angebote/#AG">Demokratie-AGs</a> in Jugendeinrichtungen an. In unserem <a class="highlight-grey" href="/angebote/#TV">WebTV-Channel</a> gibt es außerdem regelmäßig Sendungen zu netzpolitischen und gesellschaftlichen Themen, die die Jugendlichen selbst mitgestalten können. 
                 <br><br>  
-                Überregionalen Bildungsverbänden und Initiativen bieten wir die Möglichkeit bei einem <a class="highlight-grey" href="/angebote/#WS">Workshop</a> zum Thema Daten und Digitalisierung Tipps, Tricks und Tools für ihre eigenen digitalen Projekte kennenzulernen. <br> 
+                Überregionalen Jugendverbänden und Initiativen bieten wir die Möglichkeit bei einem <a class="highlight-grey" href="/angebote/#WS">Workshop</a> zum Thema Daten und Digitalisierung Tipps, Tricks und Tools für ihre eigenen digitalen Projekte kennenzulernen. <br> 
                     <a href="/angebote"><button class="btn btn-start">Mehr erfahren!</button> </a> 
                 </p>
             </div>
