--- a/angebote/index.html
+++ b/angebote/index.html
@@ -12,7 +12,7 @@ title: "Angebote"
                <h1>Unsere Workshopformate</h1>
                
                <p class="text">
-                    Unsere Angebote richten sich zum einen an Jugendliche und außerschulische Jugendeinrichtungen, zum anderen an überregionale Bildungsverbände und Träger von Jugendbildungsstätten. 
+                    Unsere Angebote richten sich zum einen an Jugendliche und außerschulische Jugendeinrichtungen, zum anderen an überregionale Jugendverbände und Träger von Jugendbildungsstätten. 
                 </p>
             </div>
         </div>
